[package]
name = "rbfrt"
version = "0.1.1-alpha"
authors = ["Steffen Lindner"]
edition = "2021"
license = "Apache-2.0"
description = "Rust library for interaction with Intel Tofino(TM) BFRT switch interface."
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.0"
prost = "0.11.0"
prost-types = "0.11.1"
tokio = { version = "1.20.1", features = ["rt-multi-thread"] }
serde = { version = "1.0.34", features = ["derive"] }
serde_json = "1.0.34"
thiserror = "1.0"
strum = "0.25"
strum_macros = { version = "0.25", features = [] }
log = "0.4.17"
tokio-stream = "0.1.9"
async-stream = "0.3.3"
crossbeam-channel = "0.5"

[build-dependencies]
tonic-build = { version = "0.8.0" }
