[package]
name = "rbfrt"
version = "0.1.8-alpha"
authors = ["Steffen Lindner", "Fabian Ihle", "Etienne Zink"]
edition = "2021"
license = "Apache-2.0"
description = "Rust library for interaction with Intel Tofino(TM) BFRT switch interface."
publish = false
repository = "https://github.com/uni-tue-kn/rbfrt"

[dependencies]
tonic = "0.14.2"
prost = "0.14.1"
prost-types = "0.14.1"
tonic-prost = "0.14.2"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
strum = "0.27.2"
strum_macros = { version = "0.27.2", features = [] }
log = "0.4.28"
tokio-stream = "0.1.9"
async-stream = "0.3.6"
crossbeam-channel = "0.5.15"
prettytable-rs = "^0.10"
futures-core = "0.3.31"

[build-dependencies]
tonic-prost-build = "0.14.2"
prost-build = "0.14.1"
